# UFC-Simulator

./: CMakeLists.txt  FightCommentary.cpp  FightCommentary.h  Match.cpp  Match.h  README.md  Tournament.cpp  Tournament.h  UserInterface.cpp  UserInterface.h  fighters.cpp  fighters.h  main.cpp
